# astro-script

./: .gitignore  README.md  REFACTORING_README.md  add-id-column-location.py  aspect_analysis.py  astro_calculations.py  astro_script.kv  astro_script.py  astro_script_main.py  bumpversion.cfg  chart_output.py  chart_patterns.py  check_mikael.py  clean_csv.ipynb  clean_csv.py  cli_parser.py  constants.py  create_altitude_column_my_event.py  data_manager.py  db - kopia.sqlite3  db.sqlite3.bak  db_manager.py  fixed_stars_arabic_parts.py  geo_time_utils.py  join_json.py  kerykeiontest.py  kivyapp.py  main.py  mainmd.py  make_id_pk.py  mirra.html  modular_complete_test.html  modular_current.html  modular_current_comparison.html  modular_final_test.html  modular_header_test.html  modular_more_planets_test.html  modular_output.html  modular_output_final.html  modular_retrograde_test.html  (+28 more)
astroscript/: arabic_parts.py  aspects.py  cli.py  config.py  constants.py  coords.py  events.py  geo.py  numerology.py  output.py  time_utils.py
cache/: kerykeion_geonames_cache.sqlite
docs/: opportunity_presets.md
ephe/: astrologically_known_fixed_stars.csv  astrologically_known_fixed_stars.txt  fixed_stars.txt  fixed_stars_all.csv  fixed_stars_all.txt  sabian.json  star_names_and_magnitudes.csv
examples/: asteroid_opportunity_rules.json  electional_opportunity_rules.json  fixed_star_opportunity_rules.json  natal_opportunity_rules.json  opportunity_rules.json  preset_opportunity_rules.json
src/: add_altitude_column.py  astrodynes.py
tests/: test_aspect_search.py  test_zodiac.py  (+2 more)
(+54 files in other folders)
